--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         }
     });
   </script>
-  <script type="module" src="src/libs/html2canvas.min.js"></script>
-  <script type="module" src="src/libs/qrcode.min.js"></script>
-  <script type="module" src="src/script.js"></script>
+  <script src="public/libs/html2canvas.min.js"></script>
+  <script src="public/libs/qrcode.min.js"></script>
+  <script src="public/script.js"></script>
 </html>
