--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             try{
                 const res = await getData(uniqueId);
                 if(res && res.status) {
+                    setLoadingBgOpacity50(true);
                     Swal.fire({
                         title: "Terjadi Kesalahan!",
                         text: "Url sudah digunakan!",
