--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     </div>
     <div>
         <div class="container mx-auto min-h-screen py-10">
-            <h1 class="text-4xl text-primary text-center font-bold mb-2">ShortLink JY</h1>
+            <div class="flex items-center justify-center gap-2 mb-4">
+                <img src="logo.svg" class="w-10 h-10" alt="-">
+                <h1 class="text-4xl text-primary text-center font-bold">ShortLink JY</h1>
+            </div>
             <div class="max-w-xl border-2 border-primary w-full rounded-xl overflow-hidden mx-auto">
                 <div class="grid grid-cols-3">
                     <button id="show-content-shortener" onclick="showShortener()" type="button" class="hover:bg-primary hover:text-white border-r-2 border-b-2 border-primary duration-300 py-2 px-1 text-sm sm:text-base sm:px-8 bg-primary w-full text-white">Shortener</button>
