--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Link Shortener BY Juliarta & Yudhiastara</title>
+    <link rel="icon" type="image/svg+xml" href="logo.svg">
     <link rel="stylesheet" href="src/output.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,15 +69,24 @@
             </div>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 mt-10 gap-3">
                 <div class="rounded-xl border-2 border-primary p-5">
-                    <h1 class="text-lg text-center font-semibold">Shortener</h1>
+                    <div class="flex items-center justify-center gap-2 mb-2">
+                        <i class="fa-solid fa-link text-2xl text-primary"></i>
+                        <h1 class="text-lg text-center font-semibold">Shortener</h1>
+                    </div>
                     <p class="text-justify">Layanan yang digunakan untuk mempersingkat tautan panjang menjadi lebih sederhana</p>
                 </div>
                 <div class="rounded-xl border-2 border-primary p-5">
-                    <h1 class="text-lg text-center font-semibold">Get Info</h1>
+                    <div class="flex items-center justify-center gap-2 mb-2">
+                        <i class="fa-solid fa-circle-info text-2xl text-primary"></i>
+                        <h1 class="text-lg text-center font-semibold">Get Info</h1>
+                    </div>
                     <p class="text-justify">Layanan untuk menyediakan informasi tautan sebelum dipersingkat dan jumlah pengakses tautannya</p>
                 </div>
                 <div class="rounded-xl border-2 border-primary p-5 col-span-1 sm:col-span-2 md:col-span-1">
-                    <h1 class="text-lg text-center font-semibold">Generate QR Code</h1>
+                    <div class="flex items-center justify-center gap-2 mb-2">
+                        <i class="fa-solid fa-qrcode text-2xl text-primary"></i>
+                        <h1 class="text-lg text-center font-semibold">Generate QR Code</h1>
+                    </div>
                     <p class="text-justify">Layanan untuk memproses pembuatan kode QR untuk menyimpan informasi tauntan yang dapat diakses dengan mudah melalui pemindaian.</p>
                 </div>
             </div>
