--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body class="font-poppins ">
-    <div id="loading" class="w-full h-screen items-center justify-center fixed z-50 bg-white top-0 left-0 hidden">
+    <div id="loading" class="w-full h-screen items-center justify-center fixed z-50 bg-white top-0 left-0 flex">
         <div class="loader"></div>
     </div>
     <div>
@@ -325,6 +325,12 @@
         window.location.href = '/404.html';
     }
 
+    document.onreadystatechange = () => {
+        if (document.readyState == "complete") {
+            setLoading(false);
+        }
+    };
+
     document.addEventListener("DOMContentLoaded", async () => {
         setLoading(true);
         const path = window.location.pathname;
@@ -355,8 +361,8 @@
             defaultAlertError();
         }
     });
-  </script>
-  <script src="libs/html2canvas.min.js"></script>
-  <script src="libs/qrcode.min.js"></script>
-  <script src="script.js"></script>
+</script>
+<script src="libs/html2canvas.min.js"></script>
+<script src="libs/qrcode.min.js"></script>
+<script src="script.js"></script>
 </html>
